MYCE-217 feat: StorageService Profile 기반 분리 및 테스트 수정 (#490)
* MYCE-217 feat: StorageService Profile 기반 분리 및 테스트 수정 (#489)

* feat: UserService 개선 및 테스트 수정

UserService의 예외 처리, 코드 명확성 및 보안을 개선했습니다.

- UserException을 도입하여 사용자 관련 예외 처리를 명확히 했습니다.
- 이메일 인증 URL을 application-dev.properties로 외부화했습니다.
- signUp 메소드에서 이미 암호화된 비밀번호를 올바르게 처리하도록 로직을 개선했습니다.
- withdrawUser 및 adminWithdrawUserByEmail 메소드에 관리자 권한 검사를 추가하여 보안을 강화했습니다.
- 권한 없는 탈퇴 시도에 대한 로깅을 개선했습니다.
- UserServiceTest를 UserException 변경 사항에 맞춰 업데이트하고, 관리자 역할을 올바르게 Mocking하며, 비밀번호 암호화 테스트 로직을 수정했습니다.

* Update ci.yml

* Fix: JWT 역할 매핑 오류로 인한 관리자 API 403 에러 수정

* UserException 추가

* ErrorCode추가

* ErrorCode 추가

* Fix: JWT 역할 매핑 오류로 인한 관리자 API 403 에러 수정 및 사용자 관련 예외 처리 시스템 개선

* Update .gitignore and stop tracking application-test.properties

* Add application-dev.properties to .gitignore

* application-test.properties 추가

* 배포 시 application-test.properties 제외 설ì정

* application-test.properties에 있는 jwt_secret 제거

* FeedShopApplicationTests에 jwt.secretê값 직적접 주입

* application-test 추가

* 배포 시 tesãt.properties 제외하게 수정

* fix: build.gradle sonar 수정

* Fix CI configuration conflicts with main branch

* 소나큐브 run 명령 변경

* ìci 양식 수정

* fix: resolve ci.yml conflict between develop and main

* test-secret-key 생성

* Fix SonarCloud PR analysis configuration

* sonarCloud 오류 해결 위한 ìci debug log 추가

* ciPRdevelop PR 시에는 Sonar 테스트 실행 안하게 ci 수정

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* settings.gradle 수정 및 주석 제거

* mergci.yml e충돌 수정

* Fix sonar branch configuration

* Remove sonar branch parameter

* ci ì 수정 permission 추가

* ciTest

* ciTest

* ciTest

* ciErrorTest

* sonarCubeErrorfix

* ci pull_reuqest -> pull_request_target

* readme.md수정

* ci수정

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update ci.yml

* qualityGate통과ì설정추가

* Update ci.yml

* ci workflow 수정

* ci workflow 수정

* SonarQube Properties debug 추가

* 기존ci

* Update ci.yml

* 아이디 찾기 완성ã

* Refactor: ResponseEntity를 처리하도록 ResponseForma